jvm内容补充